	- removed silly table id allocation limit (t1000) in Coll.pm

1.13  Jul 11 2000 - interim version
	- new FlatHash and DMDateTime mappings contributed by Gabor Herr
          <herr@iti.informatik.tu-darmstadt.de>
	- some more doc in Type.pod
	- date & time doc moved to DateTime.pod
	- deploy() puts \n between instructions in trace

1.15  Jul 21 2000 - interim version
	- new PerlDump mapping contributed by Gabor Herr
          <herr@iti.informatik.tu-darmstadt.de>

1.16  Jul 25 2000 - interim version
	- fixed deploy() bug: didn't take col names into account for Array, Set and Hash
	- fixed query_expr bug in Scalar and Ref: used field name instead of col name

1.17  Jul 28 2000 - interim version
	- Gabor's patches on deep updates

1.18  Jul 28 2000 - stable version
	- weakrefs!
	- tuples
	- mysql tx acquired lock regardless of tx nesting

1.19  Jul 28 2000 - stable version
	- improved id allocation for mysql
	- bitwise operators for mysql
	- manual class id allocation
	- install now works in the absence of DBI and Set::Object
	- Makefile.PL prerequisites work now
	- Guided Tour is now generated & can be run
	- added support for LIMIT in selects
	- deploy() didn't take explicit oid/cid type into account; fixed
	- deploy() wrongly defaulted to NULLable types; fixed
	- class id can now be specified
	- oid and cid now default to INTEGER
	- fixed error in Expr.pod but I don't remember what it was	
	- minor improvement to Schema.pod
	- added Springfield.pm for users to play with
	- added support for SELECT SUM

2.00  Feb ?? 2001 - first S.O.L. release
	- added copyright notices
	- added a copy of the GPL
	- implemented inlined exports
	- INSERT and UPDATE now make use of prepared statements when available
	- re-executable Cursors
	- changed database layout, Class Table is gone and 'control' table in there
	- object ids are no longer allocated on a class basis
	- introduced Tangram::Relational
	- dialect are now done via derivation