@@ -40,9 +40,17 @@ use Tangram::Scalar;
 
 package Tangram::Ref;
 
-use base qw( Tangram::Scalar );
+use base qw( Tangram::Scalar SelfLoader );
 
 $Tangram::Schema::TYPES{ref} = Tangram::Ref->new;
+
+sub field_reschema
+  {
+	my ($self, $field, $def) = @_;
+	$self->SUPER::field_reschema($field, $def);
+	die unless $field;
+	$def->{type_col} ||= "${field}_type";
+  }
 
 sub save
 {
@@ -52,22 +60,103 @@ sub save
    {
       push @$cols, $members->{$member}{col};
       my $tied = tied($obj->{$member});
-      push @$vals, $tied ? $tied->id : $storage->auto_insert($obj->{$member}, $table, $member, $id, $members->{$member}->{deep_update});
+	  my $refid = $tied ? $tied->id : $storage->auto_insert($obj->{$member}, $table, $member, $id, $members->{$member}->{deep_update});
+      push @$vals, $refid && $storage->{export_id}->($refid);
    }
+}
+
+sub get_export_cols
+{
+    my ($self, $members, $context) = @_;
+	return $context->{storage}{layout1} ? map { $_->{col} } values %$members : map { $_->{col}, $_->{type_col} } values %$members;
+}
+
+sub cols
+{
+    my ($self, $members, $context) = @_;
+	return $context->{storage}{layout1} ? map { $_->{col} } values %$members : map { $_->{col}, $_->{type_col} } values %$members;
 }
 
 sub get_exporter
   {
 	my ($self, $field, $def, $context) = @_;
 	my $table = $context->{schema}{classes}{ $context->{class} }{table};
-	my $col = $def->{col};
 	my $deep_update = exists $def->{deep_update};
 
+	
+	if ($context->{storage}{layout1}) {
+	  return sub {
+		my ($obj, $context) = @_;
+		
+		return undef unless exists $obj->{$field};
+		
+		my $storage = $context->{storage};
+		
+		my $tied = tied($obj->{$field});
+		return $tied->id if $tied;
+		
+		my $ref = $obj->{$field};
+		return undef unless $ref;
+		
+		my $id = $storage->id($obj);
+		
+		if ($storage->is_being_saved($ref)) {
+		  $storage->defer( sub
+						   {
+							 my $storage = shift;
+							 
+							 # now that the object has been saved, we have an id for it
+							 my $refid = $storage->id($ref);
+							 # patch the column in the referant
+							 $storage->sql_do( "UPDATE $table SET $def->{col} = $refid WHERE id = $id" );
+						   } );
+		  
+		  return undef;
+		}
+		
+		$storage->_save($ref)
+		  if $deep_update;
+		
+		return $storage->id($ref) || $storage->_insert($ref);
+	  }
+	}
+	
 	return sub {
+	  
 	  my ($obj, $context) = @_;
+	  
+	  return (undef, undef) unless exists $obj->{$field};
+	  
+	  my $storage = $context->{storage};
+	  
 	  my $tied = tied($obj->{$field});
-	  return $tied ? $tied->id
-		: $context->{storage}->auto_insert($obj->{$field}, $table, $col, $context->{id}, $deep_update);
+	  return $storage->split_id($tied->id) if $tied;
+	  
+	  my $ref = $obj->{$field};
+	  return (undef, undef) unless $ref;
+	  
+	  my $exp_id = $storage->export_object($obj);
+	  
+	  if ($storage->is_being_saved($ref)) {
+		$storage->defer( sub
+						 {
+						   my $storage = shift;
+						   
+						   # now that the object has been saved, we have an id for it
+						   my $ref_id = $storage->export_object($ref);
+						   my $type_id = $storage->class_id(ref($ref));
+						   
+						   # patch the column in the referant
+						   $storage->sql_do( "UPDATE $table SET $def->{col} = $ref_id, $def->{type_col} = $type_id WHERE id = $exp_id" );
+						 } );
+		
+		return (undef, undef);
+	  }
+	  
+	  $storage->_save($ref)
+		if $deep_update;
+	  
+	  return $storage->split_id($storage->id($ref) || $storage->_insert($ref));
 	}
   }
 
@@ -80,10 +169,12 @@ sub read
    foreach my $r (keys %$members)
    {
       my $rid = shift @$row;
+	  my $cid = shift @$row unless $storage->{layout1};
+#	  die "$rid :: $cid" unless !$rid == !$cid;
 
       if ($rid)
       {
-         tie $obj->{$r}, 'Tangram::RefOnDemand', $storage, $id, $r, $rid;
+         tie $obj->{$r}, 'Tangram::RefOnDemand', $storage, $id, $r, $storage->combine_ids($rid, $cid);
       }
       else
       {
@@ -126,5 +217,21 @@ sub erase
 	}
 }
 
+sub DESTROY { }
+
+use SelfLoader;
+
 1;
 
+__DATA__
+
+sub Tangram::Ref::coldefs
+{
+    my ($self, $cols, $members, $schema) = @_;
+
+    for my $def (values %$members) {
+	  my $nullable = !exists($def->{null}) || $def->{null} ? " $schema->{sql}{default_null}" : '';
+	  $cols->{ $def->{col} } = $schema->{sql}{id} . $nullable;
+	  $cols->{ $def->{type_col} or die } = $schema->{sql}{cid} . $nullable;
+    }
+}
